[workspace]
resolver = "2"
members = [
   "HardwareDrivers/PowerMeters/RsIskraMeter",
   "HardwareDrivers/Payment/RsPaymentTerminal",
   "Examples/RustExamples/RsExample",
   "Examples/RustExamples/RsExampleUser",
]

[workspace.dependencies]
everestrs = { git = "https://github.com/everest/everest-framework.git", rev = "5cb52c3c3f9a2c8a54219900307c5c86218de3d1" }
everestrs-build = { git = "https://github.com/everest/everest-framework.git", rev = "5cb52c3c3f9a2c8a54219900307c5c86218de3d1" }
