[workspace]
resolver = "2"
members = [
   "HardwareDrivers/PowerMeters/RsIskraMeter",
   "HardwareDrivers/Payment/RsPaymentTerminal",
   "Examples/RustExamples/RsExample",
   "Examples/RustExamples/RsExampleUser",
]

[workspace.dependencies]
everestrs = { path = "../lib/everest/framework" }
everestrs-build = { path = "../lib/everest/framework" }
