[workspace]
resolver = "2"
members = [
   "HardwareDrivers/PowerMeters/RsIskraMeter",
   "HardwareDrivers/Payment/RsPaymentTerminal",
   "Examples/RustExamples/RsExample",
   "Examples/RustExamples/RsExampleUser",
   "Misc/RsCertRenewal",
]

[workspace.dependencies]
everestrs = { path = "framework/everestrs/everestrs" }
everestrs-build = { path = "framework/everestrs/everestrs-build" }
