[project]
name = "package_spyclient_api"
version = "0.0.1"
authors = [{ name="Florin Mihut", email="florin.mihut@pionix.de" }]
description = "A generated asyncapi python mqtt spy client"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
